<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nao_dance_pkg</name>
  <version>1.0.0</version>
  <description>
    NAO humanoid robot choreographed dance routine in a stadium.
    5 movements involving multiple limbs: hand wave, tai chi,
    side shuffle, spin turn, and a finale kick.
  </description>
  <maintainer email="fatima@university.ac.uk">Fatima Jadoon</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
